src/objects/Goal__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Antisocial Associates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antisocial Cognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antisocial Personality Pattern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil/Legal Support and Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community/Social Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Tenure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Attainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family/Marital Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Reunification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Home Care Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing: Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing: Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judicial and Civic Accountability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure/Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical/Dental Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School/Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Program_Plan__r.Client_Name__r.FirstName &amp; &apos; &apos; &amp;  Program_Plan__r.Client_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOHMH_Achieved_Date__c</fullName>
        <label>DOHMH Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOHMH_Milestone__c</fullName>
        <label>DOHMH Milestone</label>
        <picklist>
            <picklistValues>
                <fullName>Community Tenure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education/School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment/Vocational programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Reunification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Home Care Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical/dental care visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Housing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Text__c</fullName>
        <formula>if(not(ispickval(Goal__c, &quot;&quot;)), TEXT(Goal__c) &amp; &quot;: &quot;, &quot;&quot;) &amp;  Other_Goal__c</formula>
        <label>Objective Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Objective</label>
        <picklist>
            <controllingField>Area__c</controllingField>
            <picklistValues>
                <fullName>Abstain from alcohol and drug use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete CEP&apos;s substance use group.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfill community service obligations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfill court obligations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfill probation obligations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participate in assessment/counseling services with CEP-EBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participate in internal drug counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participate in outpatient counseling services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participate in outpatient drug treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursue basic Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursue Career Exploration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursue college degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursue employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursue GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursue high school diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursue vocational training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_Goal__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Plan__c</fullName>
        <label>Program Plan</label>
        <referenceTo>Program_Plan__c</referenceTo>
        <relationshipName>Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rationale__c</fullName>
        <label>Rationale</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Responsive_Services__c</fullName>
        <label>Risk Responsive Services</label>
        <picklist>
            <picklistValues>
                <fullName>Onsite CBT Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reasoning and Rehabilitation 2 Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse Treatment Linkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health TX with Integrated SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal and Addictive Thinking Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Social Networking Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linkage to CBT Treatment</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Risk_Responsive__c</fullName>
        <label>Risk Responsive</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Type_Detail__c</fullName>
        <label>Service Type Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Empowerment and Self Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Life and Social Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing/Money Management/Entitlements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Treatment for Substance Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem Solving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School/Training Work Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Planning and Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supportive Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Linkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Treatment Linkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse Treatment Linkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Escort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Support Facilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Getting Motivated to Change Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV Prevention &amp; Sexual Health Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barriers to Employment Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double Trouble In Recovery Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seeking Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stages of Change Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motivation Therapy/Cannabis Users Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPARCS Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forward Thinking Journaling Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral to Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linkage to Services (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medication Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric ER Referral</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Objective</label>
    <nameField>
        <displayFormat>Obj-{00000}</displayFormat>
        <label>Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <recordTypes>
        <fullName>CIRT</fullName>
        <active>true</active>
        <label>CIRT</label>
    </recordTypes>
    <recordTypes>
        <fullName>START</fullName>
        <active>true</active>
        <label>START</label>
    </recordTypes>
    <recordTypes>
        <fullName>Youth</fullName>
        <active>true</active>
        <label>Youth</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Other_Goal</fullName>
        <active>false</active>
        <errorConditionFormula>AND(TEXT(Goal__c) = &apos;Other&apos;, LEN( Other_Goal__c) = 0)</errorConditionFormula>
        <errorDisplayField>Other_Goal__c</errorDisplayField>
        <errorMessage>You must enter &quot;Other Goal&quot; if &quot;Goal&quot; is set to other</errorMessage>
    </validationRules>
</CustomObject>